kam/environments/welcome-dev/apps/welcome/services/welcome/base/config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: welcome
    app.kubernetes.io/component: welcome
    app.kubernetes.io/instance: welcome
    app.kubernetes.io/part-of: welcome
  name: welcome
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: welcome
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: welcome
        deploymentconfig: welcome
    spec:
      containers:
      - image: quay.io/eformat/welcome:latest
        imagePullPolicy: Always
        name: welcome
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
